# ede

./: AUTHORS  BUGS  ChangeLog  HACKING.txt  INSTALL  Jamconfig.in  Jamfile  Jamrules  Makefile  README  README.alpha  README.in  README.md  README.patches  autogen.sh  configure.in  ede.spec.in  edeconf.h.in  makeinclude.in  mkinstalldirs  prepare  tempfile.tmp  vedran.plan
data/: Jamfile  ede.conf  ede.desktop  ede.desktop.in  startede.in  wmanager.conf
datas/: Jamfile  Makefile  efltk.conf  mime.conf  mimetypes.conf  startede.in  startede2.in
doc/: Jamfile  dbus-usage.txt  index.txt  index.txt.in  introduction.txt  jambuild.txt
docs/: Jamfile  dbus-usage.txt  index.txt  introduction.txt  jambuild.txt
eabout/: eabout.cpp  eabout.fl
ecalc/: Jamfile  Main.fl  Makefile  SciCalc.cpp  SciCalc.fl  SciCalc.h
ecolorconf/: EDE_FontChooser.cpp  EDE_FontChooser.h  Jamfile  Makefile  ecolorconf.cpp  ecolorconf.fl  ecolorconf.fld  ecolorconf.h  ecolorutils.cpp  ecolorutils.h  edetheme.cpp
econtrol/: Jamfile  Makefile  econtrol.cpp  econtrol.fl  econtrol.fld  econtrol.h
ecrasher/: CrashDialog.cpp  CrashDialog.h
ede-about/: Jamfile  eabout.cpp  ede-about.cpp  ede-about.fl  gen-about.sh
ede-autostart/: Jamfile  ede-autostart.cpp
ede-bell-conf/: Jamfile  ede-bell-conf.cpp
ede-bug-tools/: Jamfile
ede-calc/: Jamfile  Main.cpp  Main.h  README  SciCalc.cpp  SciCalc.fl
ede-conf/: Jamfile  econtrol.cpp  ede-conf.conf  ede-conf.cpp
ede-crasher/: CrashDialog.cpp  Jamfile  ede-crasher.cpp
ede-desktop/: Desktop.cpp  Desktop.h  DesktopIcon.cpp  DesktopIcon.h  Globals.h  IconDialog.cpp  IconDialog.h  IconProperties.cpp  IconProperties.h  Jamfile  MovableIcon.cpp  MovableIcon.h  Utils.cpp  Utils.h  Wallpaper.cpp  Wallpaper.h  ede-desktop.conf  ede-desktop.cpp  ede-desktop.h  eiconman.conf  eiconman.cpp
ede-desktop-conf/: BoxBlur.cpp  BoxBlur.h  Jamfile  ede-desktop-conf.cpp
ede-dialog/: Jamfile  ede-dialog.cpp  ede-dialog.txt
ede-help/: Jamfile  ede-help.in  ede-help.txt  ehelp.in
ede-image-view/: Jamfile  ede-image-view.cpp  eimage.cpp
ede-keyboard-conf/: Jamfile  ede-keyboard-conf.cpp  ede-keyboard-conf.fl
ede-launch/: Jamfile  StartupNotify.cpp  StartupNotify.h  ede-launch-sn.cpp  ede-launch.cpp
ede-notify-daemon/: Jamfile  NotifyWindow.cpp  NotifyWindow.h  ede-notify-daemon.cpp  ede-notify-daemon.txt  test-notifications.sh  window.fl
ede-panel/: Applet.h  AppletManager.cpp  AppletManager.h  Hider.cpp  Hider.h  Jamfile  Makefile  Netwm.cpp  Netwm.h  Panel.cpp  Panel.h  aboutdialog.cpp  aboutdialog.fld  aboutdialog.h  batterymonitor.cpp  batterymonitor.h  cpumonitor.cpp  cpumonitor.h  dock.cpp  dock.h  ede-panel.cpp  item.cpp  item.h  keyboardchooser.cpp  keyboardchooser.h  logoutdialog.cpp  logoutdialog.h  mainmenu.cpp  mainmenu.h  mainmenu_scan.cpp  menu.h  panelbutton.cpp  panelbutton.h  taskbutton.cpp  taskbutton.h  workpanel.cpp  workpanel.h
ede-preferred-applications/: AppChoice.cpp  AppChoice.h  Apps.cpp  Apps.h  Jamfile  PredefApps.h  ede-preferred-applications.cpp  ede-preferred-applications.fld
ede-screen-lock/: Jamfile  ede-screen-lock
ede-screensaver-conf/: Jamfile  XScreenSaver.cpp  XScreenSaver.h  ede-screensaver-conf.cpp  ede-screensaver-conf.fl  ehacklist.h  escreensaver.cpp  escreensaver.h  escrsaverconf.cpp
ede-timedate/: EDE_Calendar.cpp  Fl_Time_Input.h  Jamfile  TODO  ede-timedate.cpp  ede-timedate.h  etimedate.h
ede-tip/: Fortune.cpp  Jamfile  ede-tip-compiler.c  ede-tip.cpp  etip.cpp
edelib2/: Config.cpp  Config.h  Icon.cpp  Icon.h  Jamfile  Makefile  MimeType.cpp  MimeType.h  NLS.h  Run.cpp  Run.h  Util.cpp  Util.h  about_dialog.cpp  about_dialog.h  aboutdialog.fld  process.cpp  process.h  pty.cpp  pty.h
edesktopconf/: edesktopconf.cpp  edesktopconf.fl
edewm/: Atoms.cpp  Atoms.h  COMPLIANCE  Cursor.cpp  Cursor.h  Desktop.cpp  Desktop.h  Events.cpp  Events.h  Frame.cpp  Frame.h  Hints.cpp  Hints.h  Hotkeys.cpp  Icccm.cpp  Icccm.h  Icon.cpp  Icon.h  Jamfile  Makefile  Mwm.cpp  Mwm.h  Netwm.cpp  Netwm.h  Sound.cpp  Sound.h  Tabmenu.cpp  Theme.cpp  Theme.h  Titlebar.cpp  Titlebar.h  Tracers.h  Utils.cpp  Utils.h  WMWindow.cpp  WMWindow.h  Windowmanager.cpp  Windowmanager.h  Winhints.cpp  Winhints.h  (+8 more)
edialog/: Jamfile  Makefile  edialog.cpp
edisplayconf/: Jamfile  Makefile  conf.cpp  conf.h  edisplayconf.cpp  edisplayconf.fl  edisplayconf.fld  edisplayconf.h  exset.h
efiler/: BUGS  EDE_Browser.cpp  EDE_Browser.h  EDE_DirTree.cpp  EDE_DirTree.h  EDE_FileBrowser.cpp  EDE_FileBrowser.cxx  EDE_FileBrowser.h  EDE_FileDetailsView.cpp  EDE_FileDetailsView.h  EDE_FileIconView.cpp  EDE_FileIconView.h  EDE_FileView.h  Fl_Icon_Browser.cxx  Fl_Icon_Browser.h  Flu_Wrap_Group.h  Jamfile  Makefile  OpenWith.cpp  OpenWith.h  Properties.cpp  Properties.h  TODO  Util.cpp  Util.h  ede_ask.cpp  ede_ask.h  ede_strverscmp.c  ede_strverscmp.h  efiler.cpp  efiler.xpm  fileops.cpp  fileops.h  filesystem.cpp  filesystem.h  mailcap.cpp  mailcap.h
efinder/: Jamfile  Makefile  efinder.cpp  efinder.fld  efinder.h  eglob.cpp  eglob.h  glob.c  globber.c  globber.h
ehelp/: Jamfile  ehelp.in  ehelp.txt
eiconman/: DesktopConfig.cpp  DesktopConfig.h  DesktopIcon.cpp  DesktopIcon.h  IconProperties.cpp  Jamfile  Makefile  NotifyBox.cpp  NotifyBox.h  Utf8.cpp  Utf8.h  Utils.cpp  Utils.h  Wallpaper.cpp  Wallpaper.h  edeskconf.cpp  edeskconf.fl  edeskconf.fld  edeskconf.h  edeskicon.cpp  edeskicon.h  eiconman.conf  eiconman.conf.old  eiconman.cpp  eiconman.h  propdialog.cpp  propdialog.fl  propdialog.fld  propdialog.h
eiconsconf/: Jamfile  Makefile  eicon.cpp  eicon.h  eiconsconf.cpp  eiconsconf.fld  eiconsconf.h
eimage/: Jamfile  Makefile  eimage.cpp
einstaller/: Jamfile  Makefile  TODO  einstall.cpp  einstall.h  einstaller.cpp  einstaller.fl  einstaller.fld  einstaller.h
ekeyconf/: Jamfile  Makefile  Shortcut_Button.cpp  Shortcut_Button.h  ekeyconf.cpp  ekeyconf.fl  ekeyconf.h  ekeys.cpp  ekeys.h
elauncher/: Jamfile  Makefile  elauncher.cpp  elauncher.h
elma/: Background.cpp  Background.h  ElmaService.cpp  ElmaService.h  ElmaWindow.cpp  Jamfile  (+8 more)
(+767 files in other folders)
